[gd_scene load_steps=25 format=3 uid="uid://dj6htpcjrkre8"]

[ext_resource type="Script" path="res://scenes/game/units/legion.gd" id="1_1kb52"]
[ext_resource type="PackedScene" uid="uid://xmbbar58v3fd" path="res://scenes/ui/soul_phase/souls_gather_container.tscn" id="2_awpxf"]
[ext_resource type="Texture2D" uid="uid://qr14kucrashs" path="res://icon.svg" id="2_tolar"]
[ext_resource type="Texture2D" uid="uid://cbmert5pfgg4n" path="res://assets/bar.png" id="3_08w20"]
[ext_resource type="Texture2D" uid="uid://d206wyqx847u4" path="res://assets/bar1.png" id="4_528kq"]
[ext_resource type="Script" path="res://scenes/game/units/legion_margin_container.gd" id="5_nfqvj"]
[ext_resource type="Shader" path="res://assets/materials_shaders/unit_background.gdshader" id="6_dk1y7"]
[ext_resource type="Shader" path="res://assets/materials_shaders/legion.gdshader" id="7_0h7qr"]
[ext_resource type="Texture2D" uid="uid://cpat55k5ohgcw" path="res://assets/noise/desolve_noise.tres" id="8_u467i"]
[ext_resource type="Texture2D" uid="uid://ckkqcsdpp6e56" path="res://assets/triumphirates/00839-2766685014-symbol of an tribal rune with red background.png" id="9_hie0a"]
[ext_resource type="Texture2D" uid="uid://dtsscr8bliiv0" path="res://assets/triumphirates/00892-3176970373-symbol of an tribal rune with green background.png" id="10_nqgtk"]
[ext_resource type="Texture2D" uid="uid://bwr56spe72ugb" path="res://assets/triumphirates/00892-3176970373-symbol of an tribal rune with green background_n.png" id="11_8jhj5"]

[sub_resource type="Environment" id="Environment_cinrl"]
background_mode = 3
glow_enabled = true

[sub_resource type="Gradient" id="Gradient_jsfci"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nd576"]
gradient = SubResource("Gradient_jsfci")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_6xjaq"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_uxg1v"]
noise = SubResource("FastNoiseLite_6xjaq")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ifw8g"]
resource_local_to_scene = true
shader = ExtResource("6_dk1y7")
shader_parameter/dissolveState = 0.0
shader_parameter/dissolveNoise = SubResource("NoiseTexture2D_uxg1v")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1oc8h"]
resource_local_to_scene = true
shader = ExtResource("7_0h7qr")
shader_parameter/dissolveState = 0.0
shader_parameter/flashState = 1.0
shader_parameter/dissolveNoise = ExtResource("8_u467i")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xkc75"]
resource_local_to_scene = true
shader = ExtResource("7_0h7qr")
shader_parameter/dissolveState = 0.0
shader_parameter/flashState = 1.0
shader_parameter/dissolveNoise = ExtResource("8_u467i")

[sub_resource type="CanvasTexture" id="CanvasTexture_t3iin"]
diffuse_texture = ExtResource("10_nqgtk")
normal_texture = ExtResource("11_8jhj5")
texture_filter = 4

[sub_resource type="CanvasTexture" id="CanvasTexture_k2e1f"]
diffuse_texture = ExtResource("2_tolar")
normal_texture = ExtResource("2_tolar")
texture_filter = 4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ftsy3"]
resource_local_to_scene = true
shader = ExtResource("7_0h7qr")
shader_parameter/dissolveState = 0.0
shader_parameter/flashState = 1.0
shader_parameter/dissolveNoise = ExtResource("8_u467i")

[sub_resource type="CanvasTexture" id="CanvasTexture_8vbvs"]
diffuse_texture = ExtResource("2_tolar")
texture_filter = 4

[node name="Legion" type="Node2D" groups=["Persist"]]
light_mask = 4
z_index = 1
script = ExtResource("1_1kb52")
soulsGatherScene = ExtResource("2_awpxf")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(20, 20, 20, 1)
position = Vector2(342, 35)
texture = ExtResource("2_tolar")

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(20, 20, 20, 1)
position = Vector2(278, -289)
texture = ExtResource("2_tolar")

[node name="Sprite2D3" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(5, 5, 5, 1)
position = Vector2(-185, -314)
texture = ExtResource("2_tolar")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_cinrl")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
position = Vector2(-2, -7)
scale = Vector2(4.39844, 4.44531)
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_nd576")
height = 20.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
visible = false
polygon = PackedVector2Array(-61.4397, -57.6001, -61.4397, 57.5999, 66.5598, 64, 61.4399, -64)

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
visible = false
offset_right = 512.0
offset_bottom = 512.0
value = 50.0
texture_under = ExtResource("3_08w20")
texture_over = ExtResource("4_528kq")

[node name="LegionMarginContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -63.0
offset_right = 55.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("5_nfqvj")

[node name="ColorRect" type="ColorRect" parent="LegionMarginContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_ifw8g")
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="LegionMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="LegionMarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="TextureRect_old" type="TextureRect" parent="LegionMarginContainer/VBoxContainer/MarginContainer"]
visible = false
texture_filter = 4
material = SubResource("ShaderMaterial_1oc8h")
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("9_hie0a")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="LegionMarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
self_modulate = Color(50, 50, 50, 1)
light_mask = 2
texture_filter = 3
material = SubResource("ShaderMaterial_xkc75")
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
texture = SubResource("CanvasTexture_t3iin")
expand_mode = 1

[node name="TextureRect4" type="Sprite2D" parent="LegionMarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
self_modulate = Color(5, 5, 5, 1)
position = Vector2(-31, 241)
texture = SubResource("CanvasTexture_k2e1f")

[node name="TextureRect" type="TextureRect" parent="LegionMarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
self_modulate = Color(1.5, 1.5, 1.5, 1)
material = SubResource("ShaderMaterial_ftsy3")
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
texture = SubResource("CanvasTexture_8vbvs")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="LegionMarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HitChanceLabel" type="Label" parent="LegionMarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
tooltip_text = "Chance to Hit an enemy Unit on a roll of a 6 sides Dice."
mouse_filter = 1
text = "?"

[node name="NameLabel" type="Label" parent="LegionMarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Legion"
horizontal_alignment = 1

[node name="DefendChanceLabel" type="Label" parent="LegionMarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
tooltip_text = "Chance to Defend on a roll of a 6 sides Dice."
mouse_filter = 1
text = "?"

[connection signal="path_changed" from="NavigationAgent2D" to="." method="_on_navigation_agend_2d_path_changed"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agend_2d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agend_2d_velocity_computed"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
